--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,8 @@ body {
   font-family: 'Varela', sans-serif;
   font-family: 'Varela Round', sans-serif;
 }
+
+.link {
+  text-decoration: none;
+  color: inherit;
+}
